Bericht: TeX-Warnings aus Michaels Part entfernt.

--- a/Documentation/Report/Parts/Einleitung.tex
+++ b/Documentation/Report/Parts/Einleitung.tex
@@ -1,6 +1,6 @@
 \authoredSection{michael}{Einleitung und Projektkontext}
 
-Der vorliegende Bericht soll die rückblickende Betrachtung eines universitären Software-Projekts konstituieren, bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die zentrale Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
+Der vorliegende Bericht soll die rückblickende Betrachtung eines universitären Software-Pro\-jekts konstituieren, bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die zentrale Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
 Dieser sollte in Architektur und Gestaltung das Verständnis softwaretechnischer wie interaktiver Konzepte deutlich machen, gleichzeitig aber geeignet sein, in einer konkreten Produktdemonstration im Projektabschluss kommerziellen Nutzen zu demonstrieren.
 Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführenden Zertifizierung mit der Scrum-Methodik vertraut gemacht, welche dann als Grundlage für die Projektarbeit diente. 
 
