--- a/Documentation/Report/Listings/Unittest.tex
+++ b/Documentation/Report/Listings/Unittest.tex
@@ -1,20 +1,3 @@
-//
-//  KibaTests.m
-//  KibaTests
-//
-//  Created by Konstantin Möllers.
-//  Copyright (c) 2014 Projekt Kiba. All rights reserved.
-//
-
-#import <XCTest/XCTest.h>
-#import "KBABootstrap.h"
-#import "KBADependencyInjector.h"
-#import "KBAAuth.h"
-
-@interface KibaTests : XCTestCase
-
-@end
-
 @implementation KibaTests
 
 /**
@@ -41,8 +24,11 @@
  */
 - (void)testAuthDependency
 {
+	// Ist die Abhängigkeit vorhanden?
     XCTAssert([KBADependencyInjector hasDependency:@"auth"],
               @"Auth dependency is missing!");
+              
+    // Handelt es sich auch um ein KBAAuth-Objekt?
     id auth = [KBADependencyInjector getByKey:@"auth"];
     XCTAssert([auth isKindOfClass:[KBAAuth class]],
               @"Auth depdency is not a valid Auth object!");
