Bericht: LaTeX raus

--- a/Documentation/Report/Parts/Toolchain.tex
+++ b/Documentation/Report/Parts/Toolchain.tex
@@ -48,17 +48,11 @@ Balsamiq
 	\caption{Entwerfen mit Balsamiq}
 \end{figure}
 
-\subsection{Design- und Textsatztools}
-Lua\LaTeX{}, Adobe Illustrator/Photoshop
+\subsection{Designtools}
+Adobe Illustrator/Photoshop
 \begin{figure}
 	\centering
 	\includegraphics[scale=.3]{Pictures/IllustratorIcon}
 	\label{fig:IllustratorIcon}
 	\caption{Designen des KiBa-Icons mit Adobe Illustrator}
-\end{figure}
-\begin{figure}
-	\centering
-	\includegraphics[scale=.3]{Pictures/LaTeXBericht}
-	\label{fig:LaTeXBericht}
-	\caption{Setzen des Projektberichts mit Lua\LaTeX}
 \end{figure}
