Bericht: Julius' Grafiken eingepflegt.

--- a/Documentation/Report/Parts/Kontexterkundung.tex
+++ b/Documentation/Report/Parts/Kontexterkundung.tex
@@ -11,4 +11,10 @@
 	
 	Eine mögliche Erklärung dafür ist, dass die Studenten bei diesen Themen einfach noch keine eigene Relevanz sehen. 
 	
-	Ein überraschendes Ergebnis der Umfrage war, dass nur 17\% der befragten Studenten eine Banking App nutzen. Für uns ist es natürlich interessant aus welchen Gründen Banking-Apps gemieden werden. Studenten gaben an „Apps sind zu unsicher“, „Apple, Microsoft und Co. würde Zugriff auf meine Daten haben“, „Unsicherheit der Datenübertragung“, „Bankgeschäfte sollte man in Ruhe bearbeiten und nicht hektisch to go“. In allen abgefragten Kategorien hatten mindestens über die Hälfte der Studenten Bedenken. Fast 80\% der befragten Studenten gaben an,  Angst vor den Missbrauch der Daten zu haben. Das zeigt, dass das Thema Sicherheit der eigenen Daten beim Banking eine Schlüsselrolle spielt und wir beim Konzept diesem Aspekt eine besondere Bedeutung zukommen lassen sollten. 
+	Ein überraschendes Ergebnis der Umfrage war, dass nur 17\% der befragten Studenten eine Banking App nutzen. Für uns ist es natürlich interessant aus welchen Gründen Banking-Apps gemieden werden. Studenten gaben an „Apps sind zu unsicher“, „Apple, Microsoft und Co. würde Zugriff auf meine Daten haben“, „Unsicherheit der Datenübertragung“, „Bankgeschäfte sollte man in Ruhe bearbeiten und nicht hektisch to go“. In allen abgefragten Kategorien hatten mindestens über die Hälfte der Studenten Bedenken. Fast 80\% der befragten Studenten gaben an,  Angst vor den Missbrauch der Daten zu haben. Das zeigt, dass das Thema Sicherheit der eigenen Daten beim Banking eine Schlüsselrolle spielt und wir beim Konzept diesem Aspekt eine besondere Bedeutung zukommen lassen sollten.
+	
+\begin{figure}[p]
+	\centering
+	\includegraphics[scale=.69]{Pictures/Kontexterkundung}
+	\caption{Ergebnisse der Kontexterkundung.}
+\end{figure}
