--- a/Documentation/Report/Parts/UIUX.tex
+++ b/Documentation/Report/Parts/UIUX.tex
@@ -5,7 +5,15 @@
 
 	Unser Ziel war es ein möglichst gebrauchstaugliches Design zu erreichen. Dazu haben wir uns an den Grundsätzen der Dialoggestaltung nach der DIN EN ISO 9241 110 orientiert. Bei der Gestaltung haben wir nur eine Schriftart verwendet und uns nach festgelegte Farbsemantiken gerichtet. Dadurch geht der Fokus auf den Inhalt nicht verloren und der Nutzer kann die App erwartungskonform nutzen. Bei der Navigation haben wir uns für eine Master-Detail-View entschieden. Dadurch haben wir eine flache Informationsstruktur, die es uns ermöglicht alle wichtigen Funktion von der Hauptseite direkt zu erreichen. Auf diese Weise haben wir unnötige Interaktionen minimiert und der Nutzer kann effizient und aufgabenangemessen mit der App interagieren.  
 
-	Auf jeder Detail-View befindet sich unten rechts ein Informationbutton. Mit diesem Button wollen wir die Selbstbeschreibungsfähigkeit der App verbessern und die Nutzer bei Problemen unterstützen. 
+	Auf jeder Detail-View befindet sich unten rechts ein Informationbutton. Mit diesem Button wollen wir die Selbstbeschreibungsfähigkeit der App verbessern und die Nutzer bei Problemen unterstützen.
+	
+\begin{figure}[p]
+	\centering
+	\includegraphics[scale=.52]{Pictures/MockupDashboard}\\
+	\includegraphics[scale=.52]{Pictures/MockupBranch}\\
+	\includegraphics[scale=.52]{Pictures/MockupTransition}
+	\caption{Mockup des Dashboards, der Filial-Seite und der Überweisung.}
+\end{figure}
 
 	Die Elemente in der Detail-View sind asymmetrisch angeordet mit einer Gewichtung oben links und unten rechts. So erreichen wir eine diagonal Balance, die optimal für den optischen Fluss ist.
 
@@ -16,8 +24,13 @@
 
 	Auf Grund von leichten Konzeptänderungen während des Projekts, haben wir manche Details im Prototypen anders als in den Mockups gestaltet.
 	
-	Beispielsweise gab uns Markus Foos den Tipp, dass Nutzer mehr interessiert sind an den Umsätzen als an dem aktuellen Kontostand. Das ist besonders der Fall bei den Leuten, deren Kontostand niedrig ist oder die sogar im Minus liegen. Da Banken sehr gut an den Kunden verdienen, die im Minus liegen, sollte der Kontostand ein nicht zu hohes Gewicht haben in der UI im Interesse der Bank.
+	Beispielsweise gab uns Markus Foos den Tipp, dass Nutzer mehr interessiert sind an den Umsätzen als an dem aktuellen Kontostand. Das ist besonders der Fall bei den Leuten, deren Kontostand niedrig ist oder die sogar im Minus liegen. Da Banken sehr gut an den Kunden verdienen, die im Minus liegen, sollte der Kontostand ein nicht zu hohes Gewicht haben in der UI im Interesse der Bank. \par
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=.52]{Pictures/Logo}
+	\caption{App-Icon mit Farbskala.}
+\end{figure}
 \subsection{Logo \& Farbharmonie}
 	Unser ausgewählte Farbharmonie spiegelt die Werte einer modernen Bank wider. Mit den Farben wollen wir Sicherheit, Nachhaltigkeit und Seriosität vermitteln. Allerdings waren wir bei der Logogestaltung in dieser Hinsicht nicht ganz konsequent. Wir hatten an dieser Stelle die Diskussion, ob wir uns nicht für ein anderes Logo entscheiden sollten. Mit dem KiBa-Glas im Logo haben wir uns darauf geeinigt als Studenten ein wenig Humor zuzulassen. Im Zusammenspiel mit dem recht nüchternen Design wirkt das Logo auflockernd.
 
