--- a/Documentation/Report/Parts/Kontexterkundung.tex
+++ b/Documentation/Report/Parts/Kontexterkundung.tex
@@ -16,5 +16,5 @@
 \begin{figure}[p]
 	\centering
 	\includegraphics[scale=.69]{Pictures/Kontexterkundung}
-	\caption{Ergebnisse der Kontexterkundung.}
+	\caption{Ergebnisse der Kontexterkundung}
 \end{figure}
