--- a/Documentation/Report/Parts/Qualitaetssicherung.tex
+++ b/Documentation/Report/Parts/Qualitaetssicherung.tex
@@ -21,4 +21,4 @@
 	
 	Programmausdruck \ref{lst:Unittest} zeigt ein Beispiel für so einen Unittest, wie er die Arbeitsweise der Dependency Injection verifizieren kann. Er zeigt, wie beispielsweise das Einbinden der Authentifizierung getestet werden kann.
 	
-	\lstinputlisting[label={lst:Unittest}, caption={Beispiel für einen Unittest mit iOS.}]{Listings/Unittest}
+	\lstinputlisting[label={lst:Unittest}, caption={Beispiel für einen Unittest mit iOS}]{Listings/Unittest}
