--- a/Documentation/Report/Parts/UIUX.tex
+++ b/Documentation/Report/Parts/UIUX.tex
@@ -12,7 +12,7 @@
 	\includegraphics[scale=.52]{Pictures/MockupDashboard}\\
 	\includegraphics[scale=.52]{Pictures/MockupBranch}\\
 	\includegraphics[scale=.52]{Pictures/MockupTransition}
-	\caption{Mockup des Dashboards, der Filial-Seite und der Überweisung.}
+	\caption{Mockup des Dashboards, der Filial-Seite und der Überweisung}
 \end{figure}
 
 	Die Elemente in der Detail-View sind asymmetrisch angeordet mit einer Gewichtung oben links und unten rechts. So erreichen wir eine diagonal Balance, die optimal für den optischen Fluss ist.
@@ -29,7 +29,7 @@
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=.52]{Pictures/Logo}
-	\caption{App-Icon mit Farbskala.}
+	\caption{App-Icon mit Farbskala}
 \end{figure}
 \subsection{Logo \& Farbharmonie}
 	Unser ausgewählte Farbharmonie spiegelt die Werte einer modernen Bank wider. Mit den Farben wollen wir Sicherheit, Nachhaltigkeit und Seriosität vermitteln. Allerdings waren wir bei der Logogestaltung in dieser Hinsicht nicht ganz konsequent. Wir hatten an dieser Stelle die Diskussion, ob wir uns nicht für ein anderes Logo entscheiden sollten. Mit dem KiBa-Glas im Logo haben wir uns darauf geeinigt als Studenten ein wenig Humor zuzulassen. Im Zusammenspiel mit dem recht nüchternen Design wirkt das Logo auflockernd.
