--- a/Documentation/Report/Parts/Kontexterkundung.tex
+++ b/Documentation/Report/Parts/Kontexterkundung.tex
@@ -1,20 +1,33 @@
 \authoredSection{julius}{Kontexterkundung}
-	Bei der Datenerhebung haben wir uns für eine Umfrage mittels Fragebogen entschieden, da die App in vielen verschiedenen Kontexten eingesetzt werden soll und wir möglichst viele Meinungen einfließen lassen wollten. 
-	
-	Für unser Konzept wollten wir wissen, welche Funktionen besonders beliebt sind und aus welchen Gründen die Teilnehmer Befürchtungen bei der Nutzung von Banking-Apps haben. Außerdem war es uns ein Anliegen nicht nur quantitative, sondern auch qualitative Daten zu erheben. Daher gab es Freitextfelder in denen die Teilnehmer Ideen, Kritik und allgemeine Bedenken in Bezug auf Banking-Apps äußern konnten. Dieses half uns die potentiellen Nutzer besser zu verstehen und Dinge aufzudecken, an die wir nicht gedacht hätten. An der Umfrage am Informatikum haben 92 Studenten teilgenommen
-	
-	Hier folgen nun die wichtigsten Ergebnisse. 
+Im Rahmen der oben beschriebenen Überlegungen wurde bereits angesprochen, dass wir eine Markterkundung durchgeführt haben. Deren Umsetzung soll hier noch einmal im Detail erläutert werden, um daraus Spezifizierungen für die Mockups zu identifizieren.
 
-	Die Top 3 der nützlichsten Features sind der Bankautomatenfinder,  Filialenfinder und die Kartensperre. Der Bankautmatenfinder wurde von 93\% der Befragten als nützlich bewertet. Das sehr ähnliche Feature der Fialenfinder fanden 81\% nützlich und die Kartensperre wurde von 61\% als nützlich angesehen. Diese Ergebnisse zeigen, dass wir die Kernfeatures einer Banking-App nicht aus den Augen verlieren dürfen und dass ein optimierter Finder Potential hat.
+\subsection{Fragebogen}
+	Bei der Datenerhebung haben wir uns, wie in Abbildung \ref{fig:Questionnaire} zu sehen, für eine Umfrage mittels Fragebogen entschieden, da die App in vielen verschiedenen Kontexten eingesetzt werden soll und wir möglichst viele Meinungen einfließen lassen wollten. 
 	
-	48\% der befragte Studenten hielten die Features „Depot-Verwaltung für Aktien“ und „Personalisierte Angebote der Bank“ als nicht nützlich.
+	Für unser Konzept wollten wir wissen, welche Funktionen besonders beliebt sind und aus welchen Gründen die Teilnehmer Befürchtungen bei der Nutzung von Banking-Apps haben. Außerdem war es uns ein Anliegen, nicht nur quantitative, sondern auch qualitative Daten zu erheben. Daher gab es Freitextfelder, in denen die Teilnehmer Ideen, Kritik und allgemeine Bedenken in Bezug auf Banking-Apps äußern konnten. Dieses half uns, die potentiellen Nutzer besser zu verstehen und Dinge aufzudecken, an die wir nicht gedacht hätten. An der Umfrage am Informatikum haben 92 Studenten teilgenommen. Hier folgen nun die wichtigsten Ergebnisse. 
 	
-	Eine mögliche Erklärung dafür ist, dass die Studenten bei diesen Themen einfach noch keine eigene Relevanz sehen. 
+\begin{figure}
+	\centering
+	\begin{tabular}{@{}cc@{}}
+		\includegraphics[page=1, scale=.3]{Pictures/Questionnaire} &
+		\includegraphics[page=2, scale=.3]{Pictures/Questionnaire}
+	\end{tabular}
+	\caption{Endfassung des Umfragebogens \label{fig:Questionnaire}}
+\end{figure}	
 	
-	Ein überraschendes Ergebnis der Umfrage war, dass nur 17\% der befragten Studenten eine Banking App nutzen. Für uns ist es natürlich interessant aus welchen Gründen Banking-Apps gemieden werden. Studenten gaben an „Apps sind zu unsicher“, „Apple, Microsoft und Co. würde Zugriff auf meine Daten haben“, „Unsicherheit der Datenübertragung“, „Bankgeschäfte sollte man in Ruhe bearbeiten und nicht hektisch to go“. In allen abgefragten Kategorien hatten mindestens über die Hälfte der Studenten Bedenken. Fast 80\% der befragten Studenten gaben an,  Angst vor den Missbrauch der Daten zu haben. Das zeigt, dass das Thema Sicherheit der eigenen Daten beim Banking eine Schlüsselrolle spielt und wir beim Konzept diesem Aspekt eine besondere Bedeutung zukommen lassen sollten.
+\subsection{Ergebnisse}
+	Die drei nützlichsten Features sind der Bankautomatenfinder, Filialenfinder und die Kartensperre. Der Bankautmatenfinder wurde von 93\% der Befragten als nützlich bewertet. Das sehr ähnliche Feature Filialenfinder fanden 81\% nützlich und die Kartensperre wurde von 61\% als nützlich angesehen. Diese Ergebnisse zeigen, dass wir die Kernfeatures einer Banking-App nicht aus den Augen verlieren dürfen und dass ein optimierter Finder Potential hat.
+	
+	48\% der befragten Studenten hielten die Features „Depot-Verwaltung für Aktien“ und „Personalisierte Angebote der Bank“ für nicht nützlich. Eine mögliche Erklärung dafür ist, dass die Studenten bei diesen Themen einfach noch keine eigene Relevanz sehen. 
+	
+	Ein überraschendes Ergebnis der Umfrage war, dass nur 17\% der befragten Studenten eine Banking App nutzen. Für uns ist es natürlich interessant, aus welchen Gründen Banking-Apps gemieden werden. Studenten gaben an, dass „Apps zu unsicher“ wären, „Apple, Microsoft und Co. Zugriff auf meine Daten“ nähmen, „Unsicherheit der Datenübertragung“, „Bankgeschäfte sollte man in Ruhe bearbeiten und nicht hektisch to go“.
+	
+	In allen abgefragten Kategorien hatte mindestens über die Hälfte der Studenten Bedenken. Fast 80\% der befragten Studenten gaben an, Angst vor Missbrauch der Daten zu haben. Das zeigt, dass das Thema Sicherheit der eigenen Daten beim Banking eine Schlüsselrolle spielt und wir beim Konzept diesem Aspekt eine besondere Bedeutung zukommen lassen sollten.
+	
+	Abschließend wollen wir die Ergebnisse in Form eines Diagramms (Abbildung \ref{fig:Kontexterkundung}) präsentieren.
 	
 \begin{figure}[p]
 	\centering
 	\includegraphics[scale=.69]{Pictures/Kontexterkundung}
-	\caption{Ergebnisse der Kontexterkundung}
+	\caption{Ergebnisse der Kontexterkundung \label{fig:Kontexterkundung}}
 \end{figure}
